Fixed button styling clipping issue.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -86,32 +86,18 @@ html, body {
           border-bottom: 0 !important;
           font-size: 1.2em !important;
           padding: 0 0.9em !important;
-
-          /* Interactive States */
-          &:disabled(not) {
-            &:hover {
-              transform: translateY(-2px) scale(1.02);
-              box-shadow: inset 0 1px 0 rgba(255,255,255,0.4), 
-                          0 6px 20px rgba(0,0,0,0.12),
-                          0 8px 24px rgba(0,0,0,0.06) !important;
-              background: linear-gradient(135deg, #fff 0%, #f5f5f5 100%) !important;
-              //FIXME: Transformed elements have parts of elements underneath them showing through
-            }
-          }
         }
 
         /* Active State Styling */
         .fc-button-active {
           position: relative;
           background: transparent !important;
-          border-top: 1px solid #000000 !important;
           color: #b0b0b0 !important;
           cursor: not-allowed;
-          opacity: 1 !important;
-          box-shadow: none !important;
           pointer-events: none;
 
           &::after {
+            z-index: 1;
             content: "";
             position: absolute;
             top: 50%;
@@ -134,10 +120,6 @@ html, body {
           display: flex;
           align-items: center;
           justify-content: center;
-
-          .span {
-            padding: 0.3em 0 !important;
-          }
         }
       }
 
@@ -153,6 +135,7 @@ html, body {
         /* Interactive States */
         &:not(:disabled) {
           &:hover {
+            z-index: 2;
             transform: translateY(-2px) scale(1.02);
             box-shadow: inset 0 1px 0 rgba(255,255,255,0.4), 
                         0 6px 20px rgba(0,0,0,0.12),
@@ -160,6 +143,7 @@ html, body {
             background: linear-gradient(135deg, #fff 0%, #f5f5f5 100%) !important;
           }
           &:active {
+            z-index: 2;
             transform: translateY(0);
             box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
             background: #f0f0f0 !important;
